# async_task_processing_engine

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: __init__.py  jobs.py
app/core/: config.py  events.py  logging.py  redis_client.py
app/models/: __init__.py  job.py
app/services/: __init__.py  job_service.py  queue_service.py  worker.py
tests/: conftest.py  test_api.py  test_job_service.py  test_queue_service.py
